--- a/client/src/components/Trades/styles.sass
+++ b/client/src/components/Trades/styles.sass
@@ -6,7 +6,7 @@
   .addTradeWrapper
     display: flex
     justify-content: space-between
-    margin: 1rem 0 3rem 0
+    // margin: 1rem 0 3rem 0
   .allItemsBtn
     border-bottom: solid 2px
   .tradeBtn
