finished main posting listings page

--- a/client/src/styles/mediaqueries.sass
+++ b/client/src/styles/mediaqueries.sass
@@ -56,8 +56,8 @@
       padding-right: 0
       padding-left: 0
     &:nth-child(3n - 1)
-      padding-right: 3.5%
-      padding-left: 3.5%
+      // padding-right: 3.5%
+      // padding-left: 3.5%
 
   .otherInfo
     margin: 0 2rem
