--- a/client/src/components/Item/styles.sass
+++ b/client/src/components/Item/styles.sass
@@ -8,7 +8,7 @@
   margin-bottom: 50px
   
   &:nth-child(2n)
-    padding-left: 4%
+    padding-left: 0
     padding-right: 0
   
 
@@ -27,3 +27,15 @@
   display: flex
   flex-direction: row
   justify-content: space-between
+
+@media screen and (max-width: 576px) 
+  .item
+    flex: 0 1 100%
+    padding-left: 0 !important
+    margin-bottom: 0
+    margin-top: 10px
+    padding-bottom: 5rem
+    border-bottom: 1px grey solid
+    height: auto
+    max-height: 400px
+  
