--- a/client/src/components/Item/styles.sass
+++ b/client/src/components/Item/styles.sass
@@ -26,7 +26,7 @@
 .itemInfoFlex 
   display: flex
   flex-direction: row
-  justify-content: space-between
+  justify-content: flex-start
 
 @media screen and (max-width: 576px) 
   .item
